--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,14 @@
       }
       * {
         margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Spartan, sans-serif;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  font-family: Spartan, sans-serif;
+  font-size: 12px;
+  font-weight: 500;
       }
     </style>
   </head>
