--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,12 @@
         font-size: 12px;
         font-weight: 500;
       }
+      p {
+  margin-top: 17px;
+  display: inline-block;
+  line-height: 1.75;
+  color: hsl(0, 0%, 63%);
+}
     </style>
   </head>
   <body>
